--- a/RabbitMQ.Excel/Views/Product/Files.cshtml
+++ b/RabbitMQ.Excel/Views/Product/Files.cshtml
@@ -1,11 +1,27 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Files";
 }
 @model List<UserFile>
-<h1>Files</h1>
 
-<table class="table table-striped">
+@section Scripts
+{
+    <script>
+        $(document).ready(function () {
+            var hasStartCreatingExcel = '@TempData["StartCreatingExcel"]';
+            if (hasStartCreatingExcel) {
+                Swal.fire({
+                    position: 'top-end',
+                    icon: 'success',
+                    title: 'Excel oluşturma işlemi başlamıştır. Bittiğinde bildiri alacaksınız.',
+                    showConfirmButton: false,
+                    timer:2500
+                })
+            }
+        })
+    </script>
+}
+<h1>Files</h1>
+<table class=" table table-striped">
     <thead>
     <tr>
         <th>File Name</th>
@@ -21,10 +37,11 @@
             <td>@item.GetCreatedDate</td>
             <td>@item.FileStatus</td>
             <td>
-                <a href="~/files/@item.FilePath" class="btn btn-primary @(item.FileStatus==FileStatus.Creating ? "disabled" : "")">
-                    Download
-                </a>
+
+                <a href="~/files/@item.FilePath" class="btn btn-primary @(item.FileStatus==FileStatus.Creating ? "disabled": "")">Download</a>
+
             </td>
+
         </tr>
     }
 </table>
